# ampdeck

./: .gitignore  Cargo.toml  README.md  Settings.toml  state.json
release/: Settings.toml  ampdeck
release/x86_64-apple-darwin/: ampdeck
src/: app.rs  audio.rs  handler.rs  lib.rs  logger.rs  main.rs  meta.rs  ui.rs
