[package]
name = "ampdeck"
version = "0.1.0"
authors = ["jesse"]
license = "MIT"
edition = "2021"

[dependencies]
crossterm = "0.27.0"
ratatui = "0.26.0"
reqwest = { version = "0.11", features = ["json"] }
rodio = "0.17.3"
tokio = { version = "1", features = ["full"] }
walkdir = "2"
wav = "1.0.0"
mp3-metadata = "0.3.4"
metaflac = "0.2.5"
log = "0.4"
simplelog = "0.11"
serde = "1.0.200"
config = "0.14.0"
libc = "0.2.154"
tui-big-text = "0.4.3"
